feat: add faq and update bank details

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Help me get a Masters Degree</h1>
     <h2>Terrible UCT admin screwed my chances of getting funding</h2>
     <div class="gauge-container">
+      <p>Deadline 30 June 2021</p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -27,13 +28,13 @@
       </p>
       <p>I was only notified in November 2020.</p>
       <p>Funding applications closed in October 2020.</p>
-      <p>Leaving me <strong>F*CKED!</strong></p>
+      <p>This left me <strong>F*CKED!</strong></p>
     </article>
     <article>
       <h3>The Situation</h3>
       <p>Fees for the year are R61 000.</p>
       <p>I've managed to cover R29 125 of it through my 13th cheque.</p>
-      <p>This leaves a shortfall of R30 885.</p>
+      <p>This leaves a shortfall of R30 885 to be paid by 30th June 2021.</p>
       <p>Here's where you come in.</p>
     </article>
     <article>
@@ -46,40 +47,37 @@
         If you chose to donate there obviously needs to be something in it for
         you too :D!
       </p>
-      <p>All funders get to be on the wall of fame with a caption!</p>
+      <p>All funders get to be on the Wall of Gratitude with a caption!</p>
     </article>
     <h3>The Bank Details</h3>
     <div>
-      <p>
-        Please note it is critical to add my student number BRXDOM001 as the
-        payment reference!!!
-      </p>
       <div>
-        <h4>UCT Bank Details</h4>
+        <h4>My Bank Details</h4>
+        <p>
+          I am using my bank details because it will be easier to track how much
+          has been donated so I can update the site as soon as any funds have
+          been received.
+        </p>
         <table>
           <tr>
             <td>Account name:</td>
-            <td>University of Cape Town</td>
+            <td>DG Bauer</td>
           </tr>
           <tr>
             <td>Bank name:</td>
-            <td>Standard Bank of South Africa</td>
-          </tr>
-          <tr>
-            <td>Bank Address:</td>
-            <td>Riverside Centre, Main Road, Rondebosch, 7700, South Africa</td>
+            <td>Capitec</td>
           </tr>
           <tr>
             <td>Account number:</td>
-            <td>27 068 9982</td>
+            <td>1515110271</td>
           </tr>
           <tr>
             <td>Branch Code:</td>
-            <td>025009</td>
+            <td>470 010</td>
           </tr>
           <tr>
             <td>Reference:</td>
-            <td>BRXDOM001</td>
+            <td>Your name or pseudonym</td>
           </tr>
         </table>
       </div>
@@ -91,6 +89,67 @@
           <img src="mom.jpg" class="wall-of-gratitude-image" />
           <p>"I mean seriously"- Mom</p>
         </div>
+      </div>
+    </article>
+    <article>
+      <h2>FAQ</h2>
+      <div class="faq-card">
+        <p class="question">Why can't I self fund the rest?</p>
+        <p class="answer">
+          I'm currently over R100 000 in student debt which I am still paying
+          off monthly
+        </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">
+          How do I send details to get on the Wall of Gratitude?
+        </p>
+        <p class="answer">
+          Message me on
+          <a href="https://www.linkedin.com/in/dgb/">LinkedIn</a> and I will
+          reply with email address where you can send the picture and caption
+          you want loaded.
+        </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">Do I need to be put on the Wall of Gratitude?</p>
+        <p class="answer">
+          If you'd prefer to donate in the shadows that is 100% fine, the Wall
+          of Gratitude is simply there to give a shoutout to those who'd like
+          one.
+        </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">How can I trust you?</p>
+        <p class="answer">
+          Most likely you will only see this website if you know who I am and
+          then I hope my reputation speaks for itself. If however this is not
+          the case then the only thing I can give you is my word which is my
+          bond.
+        </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">What happens if the target is reached?</p>
+        <p class="answer">
+          I will add Proof of Payment to the site and update it accordingly. The
+          Wall of Gratitude will remain for the rest of the year before the
+          domain name expires.
+        </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">
+          What happens if the amount isn't reached by 30 June 2021?
+        </p>
+        <p class="answer">
+          The total amount that has been donated will be transferred into UCT's
+          account.
+        </p>
+        <p>
+          Interest will be added to the outstanding amount and I will need to
+          wait until my next 13th cheque at the end of this year to cover the
+          rest (or more money will trickle in from funders which will be used to
+          pay the rest before then).
+        </p>
       </div>
     </article>
   </body>
