feat: add image, video and meta tags

--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Help me get my Masters Degree in Data Science from UCT"
+    />
+    <meta property="og:title" content="Help fund my Masters in Data Science" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.fundmymasters.com" />
+    <meta property="og:image" content="dom-picture.jpg" />
+    <meta
+      property="twitter:title"
+      content="Help fund my Masters in Data Science"
+    />
+    <meta
+      property="twitter:description"
+      content="Help me get my Masters Degree in Data Science from UCT"
+    />
     <link rel="stylesheet" href="styles.css" />
-    <title>Masters Fundraising</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <title>Help fund my Masters in Data Science</title>
   </head>
   <body>
     <h1>Help me get a Masters Degree</h1>
     <h2>Terrible UCT admin screwed my chances of getting funding</h2>
     <div class="gauge-container">
       <p>Deadline 30 June 2021</p>
+      <p>Progress Barometer</p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -20,6 +38,11 @@
         <p>R61,000</p>
       </div>
     </div>
+    <article>
+      <h3>The Person</h3>
+      <p>Howdy I'm Dom and I need your help!</p>
+      <img src="dom-picture.jpg" class="dom-picture" />
+    </article>
     <article>
       <h3>The Story</h3>
       <p>I applied to do a BSc Masters Degree at UCT in April 2020.</p>
@@ -54,9 +77,8 @@
       <div>
         <h4>My Bank Details</h4>
         <p>
-          I am using my bank details because it will be easier to track how much
-          has been donated so I can update the site as soon as any funds have
-          been received.
+          I am using my bank details because I can then keep track of
+          accumulated funds and update the website accordingly.
         </p>
         <table>
           <tr>
@@ -150,6 +172,13 @@
           rest (or more money will trickle in from funders which will be used to
           pay the rest before then).
         </p>
+      </div>
+      <div class="faq-card">
+        <p class="question">Can you dance?</p>
+        <p class="answer">I try :P</p>
+        <video width="400" height="400" controls>
+          <source src="dancing-video.mp4" type="video/mp4" />
+        </video>
       </div>
     </article>
   </body>
