--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Help fund my Masters in Data Science</title>
     <meta
       name="description"
       content="Help me get my Masters Degree in Data Science from UCT"
@@ -11,7 +12,10 @@
     <meta property="og:title" content="Help fund my Masters in Data Science" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.fundmymasters.com" />
-    <meta property="og:image" content="dom-picture.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.fundmymasters.com/dom-picture.jpg"
+    />
     <meta
       property="twitter:title"
       content="Help fund my Masters in Data Science"
@@ -20,9 +24,13 @@
       property="twitter:description"
       content="Help me get my Masters Degree in Data Science from UCT"
     />
+    <meta
+      property="twitter:image"
+      content="https://www.fundmymasters.com/dom-picture.jpg"
+    />
+    <meta property="twitter:url" content="https://www.fundmymasters.com" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>Help fund my Masters in Data Science</title>
   </head>
   <body>
     <h1>Help me get a Masters Degree</h1>
