chore: update meta image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://www.fundmymasters.com" />
     <meta
       property="og:image"
-      content="https://www.fundmymasters.com/dom-picture.jpg"
+      content="https://www.fundmymasters.com/dom-picture-meta.jpg"
     />
     <meta
       property="twitter:title"
@@ -26,7 +26,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://www.fundmymasters.com/dom-picture.jpg"
+      content="https://www.fundmymasters.com/dom-picture-meta.jpg"
     />
     <meta property="twitter:url" content="https://www.fundmymasters.com" />
     <link rel="stylesheet" href="styles.css" />
