feat: add adrian to Wall and increase barometer

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <h1>Help me get a Masters Degree</h1>
     <h2>Terrible UCT admin screwed my chances of getting funding</h2>
     <div class="gauge-container">
-      <p>Deadline 30 June 2021</p>
-      <p>Progress Barometer</p>
+      <p>Deadline: <strong>30 June 2021</strong></p>
+      <p>Amount still needed: <strong>R29,875</strong></p>
+      <p>Progress Barometer: <strong>Over halfway</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -53,7 +54,10 @@
     </article>
     <article>
       <h3>The Story</h3>
-      <p>I applied to do a BSc Masters Degree at UCT in April 2020.</p>
+      <p>
+        I applied to do a BSc Masters Degree in Data Science at UCT in April
+        2020.
+      </p>
       <p>
         UCT was supposed to let me know if I was accepted by September 2020.
       </p>
@@ -118,6 +122,10 @@
         <div class="wall-of-gratitude-card">
           <img src="mom.jpg" class="wall-of-gratitude-image" />
           <p>"I mean seriously"- Mom</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="adrian.png" class="wall-of-gratitude-image" />
+          <p>TBC - Adrian Bunge</p>
         </div>
       </div>
     </article>
