chore: change headline

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
   </head>
   <body>
     <h1>Help me get a Masters Degree</h1>
-    <h2>Terrible UCT admin screwed my chances of getting funding</h2>
+    <h2>
+      I'm a developer paying off previous student debt trying to improve my
+      circumstances
+    </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
       <p>Amount still needed: <strong>R29,875</strong></p>
