chore: add 2 new people to the Wall and update numbers etc...

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount still needed: <strong>R27,875</strong></p>
-      <p>Progress Barometer: <strong>Over halfway</strong></p>
+      <p>Amount still needed: <strong>R19,731</strong></p>
+      <p>Progress Barometer: <strong>Almost 75%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -129,6 +129,14 @@
         <div class="wall-of-gratitude-card">
           <img src="adrian.png" class="wall-of-gratitude-image" />
           <p>TBC - Adrian Bunge</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="sebby.png" class="wall-of-gratitude-image" />
+          <p>"Google it" - Sebastian Collins</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="mike.png" class="wall-of-gratitude-image" />
+          <p>"This to shall pass" - Mike Scott</p>
         </div>
       </div>
     </article>
