chore: add ninja to Wall

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
           <p>TBC - Adrian Bunge</p>
         </div>
         <div class="wall-of-gratitude-card">
+          <img src="ninja.jpg" class="wall-of-gratitude-image" />
+          <p>Unnamed Hero</p>
+        </div>
+        <div class="wall-of-gratitude-card">
           <img src="sebby.png" class="wall-of-gratitude-image" />
           <p>"Google it" - Sebastian Collins</p>
         </div>
