--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount still needed: <strong>R19,731</strong></p>
+      <p>Amount received: <strong>R41, 469</strong></p>
+      <p>Amount still needed: <strong>R19,531</strong></p>
       <p>Progress Barometer: <strong>Almost 75%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
@@ -82,7 +83,7 @@
         still outstanding.
       </p>
       <p>
-        If you chose to donate there obviously needs to be something in it for
+        If you choose to donate there obviously needs to be something in it for
         you too :D!
       </p>
       <p>All funders get to be on the Wall of Gratitude with a caption!</p>
@@ -141,6 +142,10 @@
         <div class="wall-of-gratitude-card">
           <img src="mike.png" class="wall-of-gratitude-image" />
           <p>"This to shall pass" - Mike Scott</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="stacy.png" class="wall-of-gratitude-image" />
+          <p>TBC - Stacy Malgarte</p>
         </div>
       </div>
     </article>
