chore: update caption

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="wall-of-gratitude-card">
           <img src="stacy.png" class="wall-of-gratitude-image" />
-          <p>TBC - Stacy Malgarte</p>
+          <p>"Go be that PrawnStar" - Stacy Malgarte</p>
         </div>
       </div>
     </article>
