feat: add lior to Wall and update numbers

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount received: <strong>R41, 469</strong></p>
-      <p>Amount still needed: <strong>R19,531</strong></p>
-      <p>Progress Barometer: <strong>Almost 75%</strong></p>
+      <p>Amount received: <strong>R51, 469</strong></p>
+      <p>Amount still needed: <strong>R9,531</strong></p>
+      <p>Progress Barometer: <strong>Over 85%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -146,6 +146,10 @@
         <div class="wall-of-gratitude-card">
           <img src="stacy.png" class="wall-of-gratitude-image" />
           <p>"Go be that PrawnStar" - Stacy Malgarte</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="lior.png" class="wall-of-gratitude-image" />
+          <p>"I told you not to do your Masters" - Lior Neu-Ner</p>
         </div>
       </div>
     </article>
