feat: add oz to Wall and update numbers

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount received: <strong>R51, 469</strong></p>
-      <p>Amount still needed: <strong>R9,531</strong></p>
+      <p>Amount received: <strong>R52, 469</strong></p>
+      <p>Amount still needed: <strong>R8,531</strong></p>
       <p>Progress Barometer: <strong>Over 85%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
@@ -150,6 +150,10 @@
         <div class="wall-of-gratitude-card">
           <img src="lior.png" class="wall-of-gratitude-image" />
           <p>"I told you not to do your Masters" - Lior Neu-Ner</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="oz.png" class="wall-of-gratitude-image" />
+          <p>"Kill it!" - Oskar Wijers</p>
         </div>
       </div>
     </article>
