--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount received: <strong>R52, 469</strong></p>
-      <p>Amount still needed: <strong>R8,531</strong></p>
+      <p>Amount received: <strong>R52, 869</strong></p>
+      <p>Amount still needed: <strong>R8,131</strong></p>
       <p>Progress Barometer: <strong>Over 85%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
@@ -154,6 +154,10 @@
         <div class="wall-of-gratitude-card">
           <img src="oz.png" class="wall-of-gratitude-image" />
           <p>"Kill it!" - Oskar Wijers</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="nadia.png" class="wall-of-gratitude-image" />
+          <p>TBC - Nadia Solomon</p>
         </div>
       </div>
     </article>
