feat: add lindo to wall and update numbers

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount received: <strong>R54, 669</strong></p>
-      <p>Amount still needed: <strong>R6,331</strong></p>
-      <p>Progress Barometer: <strong>Almost 90%</strong></p>
+      <p>Amount received: <strong>R55, 169</strong></p>
+      <p>Amount still needed: <strong>R5,831</strong></p>
+      <p>Progress Barometer: <strong>Over 90%</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -166,6 +166,10 @@
         <div class="wall-of-gratitude-card">
           <img src="nicholas.png" class="wall-of-gratitude-image" />
           <p>TBC - Nicholas Lazarides</p>
+        </div>
+        <div class="wall-of-gratitude-card">
+          <img src="lindo.png" class="wall-of-gratitude-image" />
+          <p>TBC - Lindo Khubeka</p>
         </div>
       </div>
     </article>
