chore: update numbers

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>30 June 2021</strong></p>
-      <p>Amount received: <strong>R55, 169</strong></p>
-      <p>Amount still needed: <strong>R5,831</strong></p>
-      <p>Progress Barometer: <strong>Over 90%</strong></p>
+      <p>Amount received: <strong>R57, 169</strong></p>
+      <p>Amount still needed: <strong>R3,831</strong></p>
+      <p>Progress Barometer: <strong>94% There</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
