--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       circumstances
     </h2>
     <div class="gauge-container">
-      <p>Deadline: <strong>30 June 2021</strong></p>
+      <p>Deadline: <strong>31 July 2021</strong></p>
       <p>Amount received: <strong>R57, 169</strong></p>
-      <p>Amount still needed: <strong>R3,831</strong></p>
-      <p>Progress Barometer: <strong>94% There</strong></p>
+      <p>Amount still needed: <strong>R26,981</strong></p>
+      <p>Progress Barometer: <strong>68% There</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
       <div class="gauge-values">
         <p>R0</p>
-        <p>R61,000</p>
+        <p>R84,150</p>
       </div>
     </div>
     <article>
@@ -67,20 +67,19 @@
       </p>
       <p>I was only notified in November 2020.</p>
       <p>Funding applications closed in October 2020.</p>
-      <p>This left me <strong>F*CKED!</strong></p>
+      <p>This left me in a bit of a bind.</p>
     </article>
     <article>
       <h3>The Situation</h3>
-      <p>Fees for the year are R61 000.</p>
+      <p>Fees for the year are R84 150.</p>
       <p>I've managed to cover R29 125 of it through my 13th cheque.</p>
-      <p>This leaves a shortfall of R30 885 to be paid by 30th June 2021.</p>
+      <p>This leaves a shortfall of R55 025 to be paid by 31 July 2021.</p>
       <p>Here's where you come in.</p>
     </article>
     <article>
       <h3>The Sell</h3>
       <p>
-        Please help me become a Master of Science by crowdfunding the R30 885
-        still outstanding.
+        Please help me become a Master of Science by crowdfunding the outstanding amount.
       </p>
       <p>
         If you choose to donate there obviously needs to be something in it for
@@ -220,17 +219,11 @@
       </div>
       <div class="faq-card">
         <p class="question">
-          What happens if the amount isn't reached by 30 June 2021?
+          What happens if the amount isn't reached by 31 July 2021?
         </p>
         <p class="answer">
           The total amount that has been donated will be transferred into UCT's
-          account.
-        </p>
-        <p>
-          Interest will be added to the outstanding amount and I will need to
-          wait until my next 13th cheque at the end of this year to cover the
-          rest (or more money will trickle in from funders which will be used to
-          pay the rest before then).
+          account and a further plan will need to be figured out.
         </p>
       </div>
       <div class="faq-card">
