chore: update numbers

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </h2>
     <div class="gauge-container">
       <p>Deadline: <strong>31 July 2021</strong></p>
-      <p>Amount received: <strong>R57, 169</strong></p>
-      <p>Amount still needed: <strong>R26,981</strong></p>
-      <p>Progress Barometer: <strong>68% There</strong></p>
+      <p>Amount received: <strong>R61, 057</strong></p>
+      <p>Amount still needed: <strong>R23,093</strong></p>
+      <p>Progress Barometer: <strong>73% There</strong></p>
       <div class="gauge">
         <div class="fill calc"></div>
       </div>
@@ -79,7 +79,8 @@
     <article>
       <h3>The Sell</h3>
       <p>
-        Please help me become a Master of Science by crowdfunding the outstanding amount.
+        Please help me become a Master of Science by crowdfunding the
+        outstanding amount.
       </p>
       <p>
         If you choose to donate there obviously needs to be something in it for
