feat: update with results

--- a/index.html
+++ b/index.html
@@ -34,94 +34,20 @@
   </head>
   <body>
     <h1>Help me get a Masters Degree</h1>
-    <h2>
-      I'm a developer paying off previous student debt trying to improve my
-      circumstances
-    </h2>
-    <div class="gauge-container">
-      <p>Deadline: <strong>31 July 2021</strong></p>
-      <p>Amount received: <strong>R61, 057</strong></p>
-      <p>Amount still needed: <strong>R23,093</strong></p>
-      <p>Progress Barometer: <strong>73% There</strong></p>
-      <div class="gauge">
-        <div class="fill calc"></div>
-      </div>
-      <div class="gauge-values">
-        <p>R0</p>
-        <p>R84,150</p>
-      </div>
-    </div>
+    <h2>We got through the coursework!!!! With an average of 79.3% overall WOOP WOOP!</h2>
+    <img src="results.png" class="results" />
     <article>
       <h3>The Person</h3>
-      <p>Howdy I'm Dom and I need your help!</p>
       <img src="dom-picture.jpg" class="dom-picture" />
-    </article>
-    <article>
-      <h3>The Story</h3>
-      <p>
-        I applied to do a BSc Masters Degree in Data Science at UCT in April
-        2020.
+      <p>Howdy I'm Dom</p>
+      <p>I would like to express my sincerest gratitude to the following donators for
+        supporting me on my journey to getting my masters!
       </p>
-      <p>
-        UCT was supposed to let me know if I was accepted by September 2020.
-      </p>
-      <p>I was only notified in November 2020.</p>
-      <p>Funding applications closed in October 2020.</p>
-      <p>This left me in a bit of a bind.</p>
     </article>
-    <article>
-      <h3>The Situation</h3>
-      <p>Fees for the year are R84 150.</p>
-      <p>I've managed to cover R29 125 of it through my 13th cheque.</p>
-      <p>This leaves a shortfall of R55 025 to be paid by 31 July 2021.</p>
-      <p>Here's where you come in.</p>
-    </article>
-    <article>
-      <h3>The Sell</h3>
-      <p>
-        Please help me become a Master of Science by crowdfunding the
-        outstanding amount.
-      </p>
-      <p>
-        If you choose to donate there obviously needs to be something in it for
-        you too :D!
-      </p>
-      <p>All funders get to be on the Wall of Gratitude with a caption!</p>
-    </article>
-    <h3>The Bank Details</h3>
-    <div>
-      <div>
-        <h4>My Bank Details</h4>
-        <p>
-          I am using my bank details because I can then keep track of
-          accumulated funds and update the website accordingly.
-        </p>
-        <table>
-          <tr>
-            <td>Account name:</td>
-            <td>DG Bauer</td>
-          </tr>
-          <tr>
-            <td>Bank name:</td>
-            <td>Capitec</td>
-          </tr>
-          <tr>
-            <td>Account number:</td>
-            <td>1515110271</td>
-          </tr>
-          <tr>
-            <td>Branch Code:</td>
-            <td>470 010</td>
-          </tr>
-          <tr>
-            <td>Reference:</td>
-            <td>Your name or pseudonym</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-    <article>
       <h2>The Wall of Gratitude</h2>
+      <h3>
+        A massive shout out to everyone who contributed, your support really took my breathe away <3!
+      </h3>
       <div class="wall-of-gratitude">
         <div class="wall-of-gratitude-card">
           <img src="mom.jpg" class="wall-of-gratitude-image" />
@@ -174,62 +100,13 @@
       </div>
     </article>
     <article>
-      <h2>FAQ</h2>
+      <h2>What now?</h2>
+      <p>All that is left is the dissertation which will be completed in 2022.
+        I will update the site with the final overall mark when this is complete :)</p>
+    </article>
+    <article>
       <div class="faq-card">
-        <p class="question">Why can't I self fund the rest?</p>
-        <p class="answer">
-          I'm currently over R100 000 in student debt which I am still paying
-          off monthly
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">
-          How do I send details to get on the Wall of Gratitude?
-        </p>
-        <p class="answer">
-          Message me on
-          <a href="https://www.linkedin.com/in/dgb/">LinkedIn</a> and I will
-          reply with email address where you can send the picture and caption
-          you want loaded.
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">Do I need to be put on the Wall of Gratitude?</p>
-        <p class="answer">
-          If you'd prefer to donate in the shadows that is 100% fine, the Wall
-          of Gratitude is simply there to give a shoutout to those who'd like
-          one.
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">How can I trust you?</p>
-        <p class="answer">
-          Most likely you will only see this website if you know who I am and
-          then I hope my reputation speaks for itself. If however this is not
-          the case then the only thing I can give you is my word which is my
-          bond.
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">What happens if the target is reached?</p>
-        <p class="answer">
-          I will add Proof of Payment to the site and update it accordingly. The
-          Wall of Gratitude will remain for the rest of the year before the
-          domain name expires.
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">
-          What happens if the amount isn't reached by 31 July 2021?
-        </p>
-        <p class="answer">
-          The total amount that has been donated will be transferred into UCT's
-          account and a further plan will need to be figured out.
-        </p>
-      </div>
-      <div class="faq-card">
-        <p class="question">Can you dance?</p>
-        <p class="answer">I try :P</p>
+        <h2 class="question">The dance of gratitude!</h2>
         <video width="300" height="400" controls>
           <source src="dancing-video.mp4" type="video/mp4" />
         </video>
